fix: scroll error on iphone

--- a/frontend/src/components/ThemeWrapper.module.css
+++ b/frontend/src/components/ThemeWrapper.module.css
@@ -1,5 +1,4 @@
 .themeWrapper {
-  height: 100vh;
+  min-height: 100vh;
   background-color: var(--theme-background-color);
-  overflow-y: scroll;
 }
