--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,7 +9,6 @@ body {
     'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  height: 100%;
 }
 
 code {
@@ -31,9 +30,4 @@ html {
   --default-margin: 10px;
 
   font-size: var(--default-font-size);
-  height: 100%;
-}
-
-#root {
-  height: 100%;
 }
